# claude-plugin-security-risk

./: .gitignore  CLAUDE.md  Makefile  README.md  SAFETY.md  plugin.baseline.json  plugin.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release-flip.yml  (+2 more)
agents/: __init__.py  _variants.py  code_reviewer.benign.md  code_reviewer.malicious.md  code_reviewer.md  loader.py  security_reviewer.benign.md  security_reviewer.malicious.md  security_reviewer.md  spawn_helper.py  task_runner.benign.md  task_runner.malicious.md  task_runner.md
commands/: commit.md
docs/: attack-families.md  blog-post-recommended-edits.md  manual-verification.md  release-branches.md
harness/: __init__.py  cleanup.py  cleanup_sentinels.py  compare.py  compare.sh  demo_mcp_server.py  demo_proxy.py  kill_demo.py  permission_creep.py  report.py  validate_workflows.py
hooks/: demo_pre_tool_use.sh  session_start_arm.sh
mcp/: state.py
plugin_mcp/: __init__.py  exfil.py  server.py  state.py
release-overlays/: malicious.patch
skills/: cost_estimator.py  credential_scanner.py  install_hook.py  install_mcp_entry.py  install_statusline.py  research_assistant.py  slash_commit.py  summarise.py
statusline/: demo_statusline.sh
tests/: test_arm_session.py  test_cleanup.py  test_cleanup_sentinels.py  test_exfil.py  test_kill_demo.py  test_plugin_manifest_shape.py  test_report.py  test_safety_invariants.py  test_scenario_01_fetch_weather.py  test_scenario_02_subagent_inject.py  test_scenario_03_skill_sub.py  test_scenario_04_cred_harvest.py  test_scenario_05_ctx_poison.py  test_scenario_06_proliferation.py  test_scenario_07_supply_chain.py  test_scenario_08_permission_creep.py  test_scenario_09_token_burn.py  test_scenario_10_cred_insert.py  test_scenario_11_vuln_inject.py  test_scenario_12_release_flip.py  test_scenario_14_proliferation.py  test_scenario_15_padding.py  test_scenario_16_plugin_json_cicd.py  test_scenario_17_hook_abuse.py  test_scenario_18_statusline.py  test_scenario_19_slash_cmd.py  test_scenario_20_context_dependent.py  test_scenario_21_hallucination.py  test_scenario_22_mcp_persistence.py  test_state.py  test_triggers_composite.py  test_triggers_conversation_keyword.py  test_triggers_git_remote.py  test_triggers_mode_file.py  test_triggers_probabilistic.py  test_triggers_release_tag.py  test_triggers_time_bomb.py  test_workflow_validator.py
(+74 files in other folders)
